--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -27,3 +27,7 @@ spring.flyway.baseline-on-migrate=true
 spring.flyway.locations=classpath:db/migration
 spring.flyway.connect-retries=10
 spring.flyway.connect-retries-interval=2
+
+
+# Spring Security OAuth2 (JWT - Keycloak)
+spring.security.oauth2.resourceserver.jwt.issuer-uri=http://localhost:8080/realms/seu-realm
